chore: update node version is cicd
Signed-off-by: yoan <yoanyombapro@gmail.com>

--- a/package.json
+++ b/package.json
@@ -230,8 +230,8 @@
     ],
     "publish": {
       "provider": "github",
-      "owner": "electron-react-boilerplate",
-      "repo": "electron-react-boilerplate"
+      "owner": "yoanyombapro1234",
+      "repo": "platform"
     }
   },
   "collective": {
