chore: update node version is cicd
Signed-off-by: yoan <yoanyombapro@gmail.com>

--- a/package.json
+++ b/package.json
@@ -171,8 +171,8 @@
     "webpack-merge": "^5.9.0"
   },
   "build": {
-    "productName": "ElectronReact",
-    "appId": "org.erb.ElectronReact",
+    "productName": "Solomon AI",
+    "appId": "io.solomon-ai.application",
     "asar": true,
     "asarUnpack": "**\\*.{node,dll}",
     "files": [
