chore: update node version is cicd
Signed-off-by: yoan <yoanyombapro@gmail.com>

--- a/package.json
+++ b/package.json
@@ -171,7 +171,7 @@
     "webpack-merge": "^5.9.0"
   },
   "build": {
-    "productName": "Solomon AI",
+    "productName": "solomon-ai",
     "appId": "io.solomon-ai.application",
     "asar": true,
     "asarUnpack": "**\\*.{node,dll}",
